--- a/_layouts/aboutnew.html
+++ b/_layouts/aboutnew.html
@@ -40,6 +40,32 @@ layout: default
       {% include selected_papers.html %}
     {% endif %}
 
+
+<hr/>
+
+<div><h2>Fun projects</h2></div>
+
+<div>
+  <div class="row">
+    <div class="col-md-4">
+      <div>
+        <a href="https://www.youtube.com/watch?v=Q1NCNPs0o1Y" target="_blank"><img src="/assets/pet-project/robotfire.gif" style="width:100%;border-radius:3px;"></a><br>
+        <div><center>Robot Fire Fighting</center></div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <a href="https://mediaspace.nottingham.ac.uk/media/Group4-Utopian/1_10b9r3a1" target="_blank"><img src="/assets/pet-project/Utopian.png" style="width:100%;border-radius:3px;"></a><br>
+      <div class="pets"><center>Utopian Short Film</center></div>
+    </div>
+   <div class="col-md-4">
+      <a href="https://mediaspace.nottingham.ac.uk/media/Group4-Dystopian/1_247yqh4y" target="_blank"><img src="/assets/pet-project/dystopian.png" style="width:100%;border-radius:3px;"></a><br>
+      <div class="pets"><center>Dystopian Short Film</center></div>
+    </div>
+  </div>
+
+  </div>
+</div>
+
     {% if page.social %}
     <div class="social">
       <div class="contact-icons">
